fixed out of screen

--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -4,7 +4,7 @@
 
 
 body{
-    background: #f8f8f8;
+    background: #151515;
     overflow-x: hidden;
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
